# pet-monitor-iot

./: .gitignore  CONFIGURACAO_AUTOMACOES.md  DUAL_BOARD_README.md  LICENSE  README.md  UART_TEST_README.md  platformio.ini
android_pet_guardian_app/: settings.gradle.kts
android_pet_guardian_app/app/: build.gradle.kts  proguard-rules.pro
android_pet_guardian_app/app/src/main/: AndroidManifest.xml
android_pet_guardian_app/gradle/wrapper/: gradle-wrapper.properties
cloud/: README_CLOUD_ARCHITECTURE.md
cloud/dashboard/: app.js  config.js  index.html  manifest.webmanifest  styles.css  sw.js
cloud/supabase/: schema.sql
cloud/supabase/functions/control-device/: index.ts
cloud/supabase/functions/dashboard-data/: index.ts
cloud/supabase/functions/ingest-telemetry/: index.ts
cloud/supabase/functions/photos/: index.ts
docs/: ARTIGO_TECNICO.md  ESQUEMA_ELETRICO_COMPLETO.md  Pet_Guardian_IoT_Apresentacao.pptx  Pet_Guardian_IoT_Documentacao_Completa.docx  gerar_documentacao_word.py
src/esp32_cam/: esp32_cam.ino
src/esp32_camera_node/: esp32_camera_node.ino
src/esp32_full_no_cam/: esp32_full_no_cam.ino
src/esp32_ov7670_non_fifo_node/: BMP.h  I2C.h  I2SCamera.cpp  I2SCamera.h  OV7670.cpp  OV7670.h  README.md  XClk.cpp  esp32_ov7670_non_fifo_node.ino
src/esp32_pet_hub_dual/: esp32_pet_hub_dual.ino
src/esp32_sensor_test/: esp32_sensor_test.ino
src/esp32_uart_link_test/: esp32_uart_link_test.ino
src/pico_w_bitdoglab_c/: CMakeLists.txt  README.md  main.c  ws2812.pio
src/pico_w_uart_test_c/: CMakeLists.txt  main.c
wokwi/: README.md  diagram.json
(+110 files in other folders)
